# Prerendered

./: .gitignore  CMakeLists.txt  lighting.1.frag  lighting.frag  normal.blend  normal.blend1  screenscale.txt  test.7z
ortho/: camera_settings.txt  orthocam.blend1
ortho/ortho2/: orthocam.blend  orthocam.blend1  works.blend
ortho/test/: 001_Birch_Middle_Age_or_Young.mtl  tree.blend
render/: depth0000.exr  normal0001.exr  position0001.exr  tree.normal.exr
src/: Isometric.hpp  IsometricDrawable.hpp  IsometricDrawer.cpp  IsometricDrawer.hpp  LevelEditor.cpp  LevelEditor.hpp  TextureLoader.cpp  TextureLoader.hpp  TwodDrawable.hpp  TwodDrawer.cpp  TwodDrawer.hpp  TwodText.cpp  TwodText.hpp  main.cpp  tinyexr.cpp
tex/: cube.depth.exr  cube.position.exr  cube2.normal.exr  tree.depth.exr  tree.position.exr
